[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/menu/settings_menu_scene/SettingsMenuContent.gd" type="Script" id=1]
[ext_resource path="res://src/menu/OptionChooser.tscn" type="PackedScene" id=2]

[node name="SettingsMenuContentControl" type="Control"]
anchor_right = 0.94
anchor_bottom = 0.873
script = ExtResource( 1 )

[node name="ControlsOptionChooser" parent="." instance=ExtResource( 2 )]
anchor_top = 0.02
anchor_bottom = 0.162
margin_bottom = 0.0

[node name="MusicHSlider" type="HSlider" parent="."]
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 0.25
min_value = -45.0
max_value = 20.0

[connection signal="value_changed" from="MusicHSlider" to="." method="_on_MusicHSlider_value_changed"]
